--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JS/TS client library for Membrane RTC Engine.",
   "license": "Apache-2.0",
   "author": "Membrane Team",
-  "main": "./dist/index.js",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es6.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
@@ -23,17 +24,23 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
+    "build": "tsc --module commonjs --downlevelIteration && rollup -c rollup.config.ts",
     "docs": "typedoc src/index.ts",
     "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "postinstall": "ts-node tools/init",
+    "format:check": "prettier --check ."
   },
   "devDependencies": {
     "@types/uuid": "^8.3.1",
     "eslint": "^7.21.0",
+    "lodash.camelcase": "^4.3.0",
     "prettier": "^2.2.1",
     "typedoc": "^0.21.2",
+    "rollup": "^0.67.0",
+    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-typescript2": "^0.18.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.2.2"
   },
